src/test/deca/context/invalid/created/binary_exp/op_arith/plus_boolean_boolean.deca
// Description :
//    test plus entre un boolean et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type boolean, L’opérande droite est de type boolean. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur +

{
boolean a;
boolean b;
int c = a + b;
}
